--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@ body {
     text-align: center;
     margin-top: 50px;
 }
-
 h1 {
     color: blue;
+}
+.convivaAIChatWindow {
+    width: 320px;
+    height: 402px;
+    border: 1px solid black;
 }
