--- a/style.css
+++ b/style.css
@@ -10,4 +10,19 @@ h1 {
     width: 320px;
     height: 402px;
     border: 1px solid black;
+    position: absolute;
+    bottom: 0px;
+    right: 29px;
+    border-radius: 9px 9px 0px 0px;
+}
+.convivaAIChatHeader {
+    padding: 15px 20px;
+    border: 1px solid black;
+    background-color: #6da927;
+}
+.convivaAIChatHeaderMinimize {
+    font-size: 24px; 
+    border: 0px; 
+    background-color: #6da927;
+    color: #FFFFFF;
 }
