--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
     font-family: Arial, sans-serif;
-    text-align: center;
-    margin-top: 50px;
 }
 h1 {
     color: blue;
@@ -20,9 +18,10 @@ h1 {
     border: 1px solid black;
     background-color: #6da927;
 }
-.convivaAIChatHeaderMinimize {
+.convivaAIChatHeaderMinimizeButton {
     font-size: 24px; 
     border: 0px; 
     background-color: #6da927;
     color: #FFFFFF;
+    float: right;
 }
