--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h1 {
     padding: 15px 20px;
     border: 1px solid black;
     background-color: #6da927;
+    color: #FFFFFF;
 }
 .convivaAIChatHeaderMinimizeButton {
     font-size: 24px; 
