--- a/style.css
+++ b/style.css
@@ -18,11 +18,12 @@ h1 {
     border: 1px solid black;
     background-color: #6da927;
     color: #FFFFFF;
+    border-radius: 9px 9px 0px 0px;
 }
 .convivaAIChatHeaderMinimizeButton {
-    font-size: 24px; 
     border: 0px; 
     background-color: #6da927;
     color: #FFFFFF;
     float: right;
+    padding-top: 5px;
 }
