--- a/style.css
+++ b/style.css
@@ -31,4 +31,6 @@ h1 {
     background-image: url('./assets/convivaBackground.png');
     background-repeat: no-repeat;
     height: 125px;
+    padding: 20px;
+    background-size: cover;
 }
