--- a/style.css
+++ b/style.css
@@ -7,15 +7,14 @@ h1 {
 .convivaAIChatWindow {
     width: 320px;
     height: 402px;
-    border: 1px solid black;
     position: absolute;
     bottom: 0px;
     right: 29px;
     border-radius: 9px 9px 0px 0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .convivaAIChatHeader {
     padding: 15px 20px;
-    border: 1px solid black;
     background-color: #6da927;
     color: #FFFFFF;
     border-radius: 9px 9px 0px 0px;
