--- a/style.css
+++ b/style.css
@@ -36,4 +36,12 @@ body {
     border: 1px solid #9cdc00;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 5px;
+    margin: 2px; 0px;
+}
+.convivaButtonContainer {
+    text-align: right;
+}
+.convivaSearchInput{
+    position: absolue;
+    bottom: 0px;
 }
