--- a/style.css
+++ b/style.css
@@ -40,11 +40,13 @@ body {
 }
 .convivaButtonInputContainer{
     padding: 20px;
+    width: 100%;
+    height: 25px;
 }
 .convivaButtonContainer {
     text-align: right;
 }
 .convivaSearchInput {
-    position: absolue;
+    position: absolute;
     bottom: 0px;
 }
