--- a/style.css
+++ b/style.css
@@ -70,6 +70,9 @@ body {
 }
 
 
+.embeddedMessagingConversationButtonWrapper .embeddedMessagingConversationButton {
+    visibility: hidden;
+}
 .embedded-messaging > .embeddedMessagingFrame {
     visibility: hidden;
 }
