--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ body {
     padding:10px; 
     width:108px; 
     cursor: pointer;
+    position: absolute;
+    bottom: 28px;
+    right: 32px;
 }
 .hideContainer {
     display: none;
