--- a/style.css
+++ b/style.css
@@ -55,14 +55,16 @@ body {
     height: 25px;
 }
 .convivaAIChatBubble{
-    color: white; 
-    background-color: #9cdc00; 
-    border-radius: 5px; 
-    padding:10px; 
-    width:108px; 
-    cursor: pointer;
-    position: absolute;
-    bottom: 28px;
+    display: flex; 
+    flex-direction: column; 
+    align-items: flex-start; 
+    padding: 15px; 
+    gap: 10px; 
+    position: absolute; 
+    bottom: 10px; 
+    background: linear-gradient(96.06deg, #417D0C 13.45%, #9CDC00 128%), #9CDC00; 
+    box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06); 
+    border-radius: 8px; 
     right: 32px;
 }
 .hideContainer {
