--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
     font-family: Arial, sans-serif;
     color: #FFFFFF;
 }
+.slds-avatar.slds-avatar_small.slds-avatar_circle
+{
+border-radius:0 !important;
+ height:auto !important   
+}
 .convivaAIChatWindow {
     width: 400px;
     height: 500px;
