--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@ body {
     font-family: Arial, sans-serif;
     color: #FFFFFF;
 }
-.slds-avatar .slds-avatar_small .slds-avatar_circle {
+.slds-avatar--circle .slds-avatar_circle {
     border-radius: 0 !important;
-    height: auto;
+   
+}
+.slds-avatar--small .slds-avatar_small{
+    height:auto !important;
 }
 .convivaAIChatWindow {
     width: 400px;
